--- a/create/index.html
+++ b/create/index.html
@@ -35,7 +35,7 @@
 							<div class="input-field">
 			          <input type="text" id="name" class="blue-grey yellow-text">
 			          <label for="nama" class="white-text">nama panggilan</label>
-			          <p>anie / ["Edy", "sahputra"]</p>
+			          <p>["Edy", "Cindy"]</p>
 			        </div>
 
 			        <div class="input-field">
