--- a/index.html
+++ b/index.html
@@ -65,6 +65,22 @@
       <span>U</span>
       <span>N</span>
     </div>
+    <div class="row"> 
+      <span>S</span>
+      <span>A</span>
+      <span>Y</span>
+      <span>A</span>
+      <span>N</span>
+      <span>G</span>
+      <span>K</span>
+      <span>U</span>
+    </div>
+    <div class="row"> 
+      <span>I</span>
+      <span>❤️</span>
+      <span>U</span>
+    </div>
+      
     <div class="row" id="born"></div>
   </div>
 </div>
