--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
   <!-- Audio element -->
-    <audio id="background-music" src="music.mp3" autoplay loop>
+    <audio id="background-music" src="hbd.mpeg" autoplay loop>
         Your browser does not support the audio element.
     </audio>
 
