--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 </head>
 
 <body>
-  <!-- Audio element -->
-    <audio id="background-music" src="hbd.mpeg" autoplay loop>
-        Your browser does not support the audio element.
-    </audio>
+  <!-- Video element with audio only (hidden) -->
+    <video id="background-video" src="hbd.mpeg" autoplay loop style="display:none;">
+        Your browser does not support the video element.
+    </video>
 
   <div class='moon'>
   <div class='crater1'></div>
@@ -93,18 +93,15 @@
 <!--<iframe width="255" height="155" src="https://www.youtube.com/embed/KDxJlW6cxRk?controls=0&loop=1" frameborder="0" allowfullscreen></iframe>-->
 <!-- </div> -->
 
-  <script>
-        // Optional: Control volume or other audio properties
-        const music = document.getElementById('background-music');
-        music.volume = 0.5; // Set volume (0.0 to 1.0)
-  </script>
+  
   <script src='js/confetti.js'></script>
   <script  src="js/index.js"></script>
   <script src="js/countdown.js"></script>
-
-
-
-
+  <script>
+        // Optional: Control volume
+        const video = document.getElementById('background-video');
+        video.volume = 0.5; // Set volume (0.0 to 1.0)
+    </script>
+  
 </body>
-
 </html>
