--- a/ucapan.html
+++ b/ucapan.html
@@ -61,7 +61,7 @@
 </head>
 <body>
    <audio class="song" loop autoplay>
-        <source src="hbd.mpeg">
+        <source src="./hbd.mpeg">
         </source>
         Your browser isn't invited for super fun audio time.
    </audio>
