--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
   <audio class="song" loop autoplay>
-        <source src="hbd.mpeg">
+        <source src="./hbd.mpeg">
         </source>
         Your browser isn't invited for super fun audio time.
   </audio>
