--- a/Cindy/index.html
+++ b/Cindy/index.html
@@ -90,7 +90,7 @@
      <!-- Pesan Ditolak -->
      <div id="pesanditolak">
        <img id="stikerditolak" src="img/weee.gif"/>
-       <p id="kataditolak">Yaudah dehhh kalau todak mauu! 😜</p>
+       <p id="kataditolak">Yaudah dehhh kalau tidak mauu! 😜</p>
      </div>
 
    </div>
