--- a/Cindy2/index.html
+++ b/Cindy2/index.html
@@ -52,7 +52,7 @@
      
      <!-- Konten Pesan Akhir -->
      <p id="kalimatbawah">I Love You ❤️</p> 
-     <p id="kalimatbawah2" class="sembunyi">Selamat Hari Jadi ❤️</p> 
+     <p id="kalimatbawah2" class="sembunyi">Happy Birthday Cintaku ❤️</p> 
      <p id="kalimatbawah3" class="sembunyi">Aku Sayang Kamu ❤️</p>
        
      <div><blockquote id='bq' data-text='&#9829;'>
