--- a/create/index.html
+++ b/create/index.html
@@ -30,24 +30,24 @@
 		      <div class="card blue-grey darken-1">
 		        <div class="card-content white-text">
 		          <span class="card-title">Buat Kartu Ultah</span>
-		          <h6>Isi nama dan tanggalnya</h6>
+		          <h6>Isi nama dan tanggalnya ya👇</h6>
 							
 							<div class="input-field">
 			          <input type="text" id="name" class="blue-grey yellow-text">
 			          <label for="nama" class="white-text">nama panggilan</label>
-			          <p>["Edy", "Cindy"]</p>
+			          <p>Examp: Edy / Cindy</p>
 			        </div>
 
 			        <div class="input-field">
 			          <input type="text" id="date" class="blue-grey yellow-text">
 			          <label for="date" class="white-text">tanggal ultah</label>
-	                          <p>["22/09/2022"]</p>
+	                          <p>Examp: 22/09/2022</p>
 			        </div>
 
 			        <div class="input-field">
 			          <input type="number" id="born" class="blue-grey yellow-text">
 			          <label for="born" class="white-text">tahun lahir</label>
-				  <p>["1999"]</p>
+				  <p>Examp: 1999</p>
 			        </div>
 
 		        </div>
